# abstract-game

./: Cargo.toml
.github/workflows/: test-abstract-game.yml
examples/: connect_four.rs  nim.rs  tic_tac_toe.rs
src/: complete_solver.rs  determined_score.rs  error.rs  game.rs  lib.rs  packed_score.rs  score.rs  solver.rs  test_util.rs  util.rs
src/human_players/: connect_n_player.rs  mod.rs  nim_player.rs  tic_tac_toe_player.rs
src/interactive/: bot_player.rs  human_player.rs  human_term_player.rs  input_reader.rs  line_reader.rs  mod.rs  mouse_reader.rs  player.rs  term_interface.rs
src/test_games/: connect_n.rs  nim.rs  tic_tac_toe.rs
