[package]
name = "abstract_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
rand = "0.9.2"
termion = "4.0.5"

[dev-dependencies]
googletest = "0.14.2"
itertools = "0.14.0"
rstest = "0.26.1"
rstest_reuse = "0.7.0"
